# CapsNet-in-C

./: .gitignore  CMakeLists.txt  README.md
include/: capsule_inference.h  h5_format.h  image_input_format.h
src/: CapsNet_inference.c  capsule_inference.c  h5_format.c  image_input_format.c
weights_txt/: layer1_biases.txt  layer1_h0_w0_weights.txt  layer1_h0_w1_weights.txt  layer1_h0_w2_weights.txt  layer1_h0_w3_weights.txt  layer1_h0_w4_weights.txt  layer1_h0_w5_weights.txt  layer1_h0_w6_weights.txt  layer1_h0_w7_weights.txt  layer1_h0_w8_weights.txt  layer1_h1_w0_weights.txt  layer1_h1_w1_weights.txt  layer1_h1_w2_weights.txt  layer1_h1_w3_weights.txt  layer1_h1_w4_weights.txt  layer1_h1_w5_weights.txt  layer1_h1_w6_weights.txt  layer1_h1_w7_weights.txt  layer1_h1_w8_weights.txt  layer1_h2_w0_weights.txt  layer1_h2_w1_weights.txt  layer1_h2_w2_weights.txt  layer1_h2_w3_weights.txt  layer1_h2_w4_weights.txt  layer1_h2_w5_weights.txt  layer1_h2_w6_weights.txt  layer1_h2_w7_weights.txt  layer1_h2_w8_weights.txt  layer1_h3_w0_weights.txt  layer1_h3_w1_weights.txt  layer1_h3_w2_weights.txt  layer1_h3_w3_weights.txt  layer1_h3_w4_weights.txt  layer1_h3_w5_weights.txt  layer1_h3_w6_weights.txt  layer1_h3_w7_weights.txt  layer1_h3_w8_weights.txt  layer1_h4_w0_weights.txt  layer1_h4_w1_weights.txt  layer1_h4_w2_weights.txt  (+124 more)
